# app/Models/Product.php
@@ -1,0 +1,117 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+/**
+ * @OA\Schema(
+ *      schema="Product",
+ *      required={"vendor_id","sku","name","price","stock","is_active"},
+ *
+ *      @OA\Property(
+ *          property="vendor_id",
+ *          description="",
+ *          readOnly=false,
+ *          nullable=false,
+ *          type="integer",
+ *          format="int32"
+ *      ),
+ *      @OA\Property(
+ *          property="sku",
+ *          description="",
+ *          readOnly=false,
+ *          nullable=false,
+ *          type="string",
+ *      ),
+ *      @OA\Property(
+ *          property="name",
+ *          description="",
+ *          readOnly=false,
+ *          nullable=false,
+ *          type="string",
+ *      ),
+ *      @OA\Property(
+ *          property="description",
+ *          description="",
+ *          readOnly=false,
+ *          nullable=true,
+ *          type="string",
+ *      ),
+ *      @OA\Property(
+ *          property="price",
+ *          description="",
+ *          readOnly=false,
+ *          nullable=false,
+ *          type="number",
+ *          format="number"
+ *      ),
+ *      @OA\Property(
+ *          property="stock",
+ *          description="",
+ *          readOnly=false,
+ *          nullable=false,
+ *          type="integer",
+ *          format="int32"
+ *      ),
+ *      @OA\Property(
+ *          property="is_active",
+ *          description="",
+ *          readOnly=false,
+ *          nullable=false,
+ *          type="boolean",
+ *      ),
+ *      @OA\Property(
+ *          property="created_at",
+ *          description="",
+ *          readOnly=true,
+ *          nullable=true,
+ *          type="string",
+ *          format="date-time"
+ *      ),
+ *      @OA\Property(
+ *          property="updated_at",
+ *          description="",
+ *          readOnly=true,
+ *          nullable=true,
+ *          type="string",
+ *          format="date-time"
+ *      )
+ * )
+ */
+class Product extends Model
+{
+    use HasFactory;
+
+    public $table = 'products';
+
+    public $fillable = [
+        'vendor_id',
+        'sku',
+        'name',
+        'description',
+        'price',
+        'stock',
+        'is_active',
+    ];
+
+    protected $casts = [
+        'sku' => 'string',
+        'name' => 'string',
+        'description' => 'string',
+        'price' => 'decimal:2',
+        'stock' => 'integer',
+        'is_active' => 'boolean',
+    ];
+
+    public static array $rules = [
+        'vendor_id' => 'required|exists:vendors,id',
+        'sku' => 'required|string|unique:products,sku',
+        'name' => 'required|string|min:2',
+        'description' => 'nullable|string',
+        'price' => 'required|numeric|min:0',
+        'stock' => 'required|integer|min:0',
+        'is_active' => 'required|boolean',
+    ];
+}
